# ssm_regimes

./: .gitignore  README.md  init.py  params.py  pyproject.toml
ssm_ext/: __init__.py  _utils.py  evaluate.py  fit.py  inference.py  params.py
ssm_regimes/: __init__.py  _utils.py  bounds.py  cusum.py  evaluate.py  fit.py  inference.py
ssm_regimes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ssm_regimes/.ipynb_checkpoints/: fit-checkpoint.py  inference-checkpoint.py
