[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssm_ext"
version = "0.1.0"
description = "Regime-model extensions to ssm: uniform fit wrappers, causal filters, restricted EM, CUSUM overlay, and regime-evaluation utilities."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Chris Mader", email = "cmader2@jh.edu" }]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "ssm @ git+https://github.com/lindermanlab/ssm.git",
]

[project.urls]
Source = "https://github.com/chrismader1/ssm_ext"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssm_ext*"]
